Started to migrate to new Verisure API. Set calls uses new API endpoints, most get calls uses old endpoints still active.
Signed-off-by: Jan Gustafsson <jannegpriv@gmail.com> (github: jannegpriv)

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -168,6 +168,7 @@
     <module>org.openhab.binding.urtsi</module>
     <module>org.openhab.binding.valloxmv</module>
     <module>org.openhab.binding.velbus</module>
+    <module>org.openhab.binding.verisure</module>
     <module>org.openhab.binding.vitotronic</module>
     <module>org.openhab.binding.weatherunderground</module>
     <module>org.openhab.binding.wemo</module>
